# tap-client

./: CMakeLists.txt  command_line.h  keystore_defs.h  keystore_report.h  keystore_request.h  libs.cmake  macros.cmake  reg_rule.txt  reg_user.txt  tap-client.c
ed25519/: ed25519.h
